include/librealsense2/rs_advanced_mode.h

/* Gets new values for STRauColorThresholdsControl, returns 0 if success */
void rs2_get_slo_color_thresholds_control(rs2_device* dev, STSloColorThresholdsControl* group, int mode, rs2_error** error);
/* Sets new values for STSloPenaltyControl, returns 0 if success */
void rs2_set_slo_penalty_control(rs2_device* dev, STSloPenaltyControl* group, rs2_error** error);
/* Gets new values for STSloPenaltyControl, returns 0 if success */
void rs2_get_slo_penalty_control(rs2_device* dev, STSloPenaltyControl* group, int mode, rs2_error** error);
/* Sets new values for STHdad, returns 0 if success */
void rs2_set_hdad(rs2_device* dev, STHdad* group, rs2_error** error);
/* Gets new values for STHdad, returns 0 if success */
void rs2_get_hdad(rs2_device* dev, STHdad* group, int mode, rs2_error** error);
/* Sets new values for STColorCorrection, returns 0 if success */
void rs2_set_color_correction(rs2_device* dev, STColorCorrection* group, rs2_error** error);
/* Gets new values for STColorCorrection, returns 0 if success */
void rs2_get_color_correction(rs2_device* dev, STColorCorrection* group, int mode, rs2_error** error);
/* Sets new values for STDepthTableControl, returns 0 if success */
void rs2_set_depth_table(rs2_device* dev, STDepthTableControl* group, rs2_error** error);
/* Gets new values for STDepthTableControl, returns 0 if success */
void rs2_get_depth_table(rs2_device* dev, STDepthTableControl* group, int mode, rs2_error** error);
void rs2_set_ae_control(rs2_device* dev, STAEControl* group, rs2_error** error);
void rs2_get_ae_control(rs2_device* dev, STAEControl* group, int mode, rs2_error** error);
void rs2_set_census(rs2_device* dev, STCensusRadius* group, rs2_error** error);
void rs2_get_census(rs2_device* dev, STCensusRadius* group, int mode, rs2_error** error);
/* Load JSON and apply advanced-mode controls, returns 0 if success */
void rs2_load_json(rs2_device* dev, const void* json_content, unsigned content_size, rs2_error** error);
/* Serialize JSON content, returns 0 if success */
rs2_raw_data_buffer* rs2_serialize_json(rs2_device* dev, rs2_error** error);